set glitch url to start hosting

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "client_id": "1114497452393898034",
-    "bot_url": "https://localhost:3000",
+    "bot_url": "https://spiritual-hungry-pigment.glitch.me/",
     "discord": {
         "minelobby_server": "1113190588846710794",
         "fatal_error_alert_user": "643536207623618589",
